--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,9 @@ body {
 .header__primary {
   display: block;
   font-size: 5rem;
+  letter-spacing: .5rem;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   -webkit-animation: slideFromLeft .7s ease-out;
           animation: slideFromLeft .7s ease-out;
 }
@@ -55,6 +58,8 @@ body {
 .header__secondary {
   display: block;
   font-size: 2rem;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   -webkit-animation: slideFromRight .7s ease-out;
           animation: slideFromRight .7s ease-out;
 }
@@ -70,6 +75,8 @@ body {
   color: white;
   -webkit-transition: all .4s;
   transition: all .4s;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   -webkit-animation: fadeIn .7s ease-in;
           animation: fadeIn .7s ease-in;
 }
@@ -109,12 +116,12 @@ body {
 @-webkit-keyframes slideFromLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(-100px);
-            transform: translateX(-100px);
+    -webkit-transform: translateX(-10rem);
+            transform: translateX(-10rem);
   }
   80% {
-    -webkit-transform: translateX(20px);
-            transform: translateX(20px);
+    -webkit-transform: translateX(2rem);
+            transform: translateX(2rem);
   }
   100% {
     opacity: 1;
@@ -126,12 +133,12 @@ body {
 @keyframes slideFromLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(-100px);
-            transform: translateX(-100px);
+    -webkit-transform: translateX(-10rem);
+            transform: translateX(-10rem);
   }
   80% {
-    -webkit-transform: translateX(20px);
-            transform: translateX(20px);
+    -webkit-transform: translateX(2rem);
+            transform: translateX(2rem);
   }
   100% {
     opacity: 1;
@@ -143,12 +150,12 @@ body {
 @-webkit-keyframes slideFromRight {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(100px);
-            transform: translateX(100px);
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
   }
   80% {
-    -webkit-transform: translateX(-20px);
-            transform: translateX(-20px);
+    -webkit-transform: translateX(-2rem);
+            transform: translateX(-2rem);
   }
   100% {
     opacity: 1;
@@ -160,12 +167,12 @@ body {
 @keyframes slideFromRight {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(100px);
-            transform: translateX(100px);
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
   }
   80% {
-    -webkit-transform: translateX(-20px);
-            transform: translateX(-20px);
+    -webkit-transform: translateX(-2rem);
+            transform: translateX(-2rem);
   }
   100% {
     opacity: 1;
